--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -3,9 +3,15 @@
 }
   
 .header__inner {
-    margin: auto 0px;
-    padding: 20px 10px;
+    margin: 0 auto;
+    padding: 20px;
     max-width: 1230px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.header__inner nav {
+    display: inline-block;
 }
   
 .header__logo {
@@ -13,5 +19,10 @@
     text-decoration: none;
     font-weight: bold;
     font-size: 36px;
+}
+
+.header-nav__link {
+    color: #fff;
+    text-decoration: none;
 }
   
